// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add *.css and *.json to Prettier extensions if Prettier >= 1.5 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"prettier\\": \\">=1.5.3\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,css,json}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add *.css to Prettier extensions if Prettier >= 1.4 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"prettier\\": \\"1.4.0\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,css}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add *.css, *.json and *.md to Prettier extensions if Prettier >= 1.8 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"prettier\\": \\"~1.8.5\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,css,json,md}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add ESLint if project depends on it 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.js\\": [
      \\"eslint --fix\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add Prettier and ESLint 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"devDependencies\\": {
    \\"eslint\\": \\"4.0.1\\",
    \\"prettier\\": \\"1.9.2\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,css,json,md}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ],
    \\"*.js\\": [
      \\"eslint --fix\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add Prettier if project depends on it 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"prettier\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.js\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should add stylelint if project depends on it 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"stylelint\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.css\\": [
      \\"stylelint --fix\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should infer ESLint extension for an npm script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint --fix --ext .js,.jsx\\",
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,jsx}\\": [
      \\"eslint --fix\\",
      \\"git add\\"
    ]
  }
}"
`;

exports[`should infer Prettier extension from an npm script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"format\\": \\"prettier --write '**/*.{js,jsx}'\\",
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"devDependencies\\": {
    \\"prettier\\": \\"1.9.2\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,jsx}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}"
`;

exports[`should merge ESLint and Prettier into a single lint-staged rule 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\",
    \\"prettier\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.js\\": [
      \\"eslint --fix\\",
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}"
`;

exports[`should use a custom ESLint extension 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,jsx}\\": [
      \\"eslint --fix\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should use a custom rules 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\",
    \\"stylelint\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.js\\": \\"false\\"
  }
}",
}
`;

exports[`should use a custom stylelint extension 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"stylelint\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.scss\\": [
      \\"stylelint --fix\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should use custom Prettier extensions 1`] = `
Object {
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"prettier\\": \\"1.9.2\\"
  },
  \\"scripts\\": {
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"lint-staged\\": {
    \\"*.{js,jsx,mjs}\\": [
      \\"prettier --write\\",
      \\"git add\\"
    ]
  }
}",
}
`;

exports[`should use default JS extension if eslint command has no --ext key 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint --fix\\",
    \\"precommit\\": \\"lint-staged\\"
  },
  \\"devDependencies\\": {
    \\"eslint\\": \\"*\\"
  },
  \\"lint-staged\\": {
    \\"*.js\\": [
      \\"eslint --fix\\",
      \\"git add\\"
    ]
  }
}"
`;
